--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "serialport": "^4.0.1"
+    "serialport": "^4.0.1",
+    "yargs": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^3.3.1"
