--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
 		"strict": [ 2, "global" ],
 		"no-constant-condition": [ 2, { "checkLoops": false } ],
 		"brace-style": [ 2, "allman", { "allowSingleLine": true } ],
-		"key-spacing": 2
+		"key-spacing": 2,
+		"no-unused-vars": [ 2, { "varsIgnorePattern": "unused|_" } ]
 	}
 }
